--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@casl/ability": "^6.5.0",
     "bull": "^4.10.4",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
